# ibgateway

./: .coverage  .env  .gitignore  README.md  RUN-TEST.md  automate-ibgateway.sh  compare-screenshots.py  dockerfile  draw-square-on-screen.py  entrypoint.sh  ibgateway_cli.py  ibgateway_manager_cli.py  install-ibgateway.sh  pyproject.toml  requirements.txt  run-ibgateway.sh  screenshot-server.py  screenshot-service.sh  start-socat-forwarding.sh  test-automation-ci.sh  test-automation.sh  test-draw-squares.sh  test-screenshot-service.sh
.aws/: cloudformation.yml
.github/workflows/: build-and-push.yml  docker-python-tests.yml  python-tests.yml  setup-baseline-screenshots.yml  telegram-notify.yml  test-automation.yml  test-screenshots.yml  test-square-artifacts.yml
ibgateway/: __init__.py  automation.py  cli.py  config.py  orchestrator.py  port_forwarder.py  screenshot.py  screenshot_server.py  services.py
ibgateway_manager/: __init__.py  automate_ibgateway.py  cli.py  config.py  connection_status.py  healthcheck.py  orchestrator.py  port_forwarder.py  screenshot.py  screenshot_server.py  services.py
scripts/: compare-test-screenshot.sh  setup.sh  setup_baselines.sh
tests/: compare_screenshots.py  test_automation.py  test_automation_flow.py  test_cli.py  test_cli_install_run.py  test_cli_routing.py  test_compare_images_pil_edges.py  test_config.py  test_integration_screenshot_comparison.py  test_port_forwarder.py  test_screenshot.py  test_screenshot_server.py  test_screenshot_server_more.py
tests/baseline_screenshots/: README.md
